--- a/index.jade
+++ b/index.jade
@@ -9,11 +9,11 @@ html(lang="en")
 			.container
 				//- h1.title(class="typewrite" data-period="1000" data-type='[ "Web Development Company", "Software Development Company" ]')
 					span.wrap
-				h1.title Bringing quality and digital progress
-				h2.sub-title Equipped with the latest technologies and best tech talents, we will light up your digital world.
+				h1.title Get What Uneed
+				h2.sub-title Equipped with latest technologies and best tech talents, we bring qualitative and efficient (progressive) software to light up your digital world
 				//- a.learn-more(href="/services")
 				//- 	button.white(role="button") Learn More
-			.scroll-down
+			#scroll-down
 
 		section#info.section-top.flex.align-ver-center
 			.container
