--- a/portfolio/travel/index.jade
+++ b/portfolio/travel/index.jade
@@ -20,33 +20,35 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Travel
-				h1.title.dark What was the challenge?
-				h2.sub-title Develop a web application for a traveling company with a complete customer planning journey features. Improve user search performance by using NLP technology.
+				.section-top
+					h2.type Travel
+					h1.title.dark What was the challenge?
+					h2.sub-title Develop a web application for a travel company with a complete customer planning journey features. Improve user search performance by using NLP technology.
 
-		section#approaches.travel
+		section#approaches.section-top.travel
 			.container
 				h1.title Challenge accepted
 				h2.sub-title 
 					p After defining initial requirements, tools and frameworks for the project, the travel website was developed and featured GDS integration with booking engine, invoicing and payment system. Built on a cross platform and with a responsive design it contained a simplified booking process with real-time results. 
 					p The natural language processing entity linking was implemented for user search performance improvement. This data input technology allowed determining the identity of entities mentioned in the text by user.
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag AngularJS
-					.tag Jade
-					.tag Stylus
-					.tag GulpJS, lodash
-					.tag Yeoman
-					.tag Google Maps
-					.tag Geolocation
-					.tag AWS (EC2)
-					.tag Jenkins
-					.tag Git
-					.tag Karma
-					.tag Jasmine
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag AngularJS
+						.tag Jade
+						.tag Stylus
+						.tag GulpJS, lodash
+						.tag Yeoman
+						.tag Google Maps
+						.tag Geolocation
+						.tag AWS (EC2)
+						.tag Jenkins
+						.tag Git
+						.tag Karma
+						.tag Jasmine
 
 		section#gallery
 			.container
