--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -25,8 +25,7 @@
 		background-image: linear-gradient(to bottom, #f6f7fa, #ffffff)
 
 	#contact-heading
-		padding-top: 7rem
-		padding-bottom: 1rem
+		padding-top: 7.6rem
 		@media screen and (min-width: $screenMedium)
 			h2.sub-title
 				text-align: center
@@ -51,6 +50,8 @@
 			padding: 3rem 1rem
 			background-color: #0e1a35
 			box-shadow: 0 0 14px 0 rgba(14, 26, 53, 0.2)
+			.icon
+				margin-right: .9rem
 			.details
 				h1
 					font-size: 21px;
@@ -65,17 +66,14 @@
 					text-align: center;
 					color: #576076;
 			.contacts
-				width: 10rem
-				margin: auto
 				font-size: 16px
 				line-height: 1.5
 				text-align: left
 				color: #8492af
 				address
 					font-style: normal
+					width: 15rem
 			@media screen and (min-width: $screenSmall)
-				display: flex
-				justify-content: center
 				.contacts
 					margin: 0 0 0 5rem
 				.details
@@ -101,10 +99,10 @@
 					color: #0e1a35
 					margin-bottom: 3rem
 			.contact-info
-				padding: 0 3rem
+				padding: 2rem 3rem
 				flex-direction: column
 				.details
-					margin-bottom: 2rem
+					margin-bottom: 7rem
 				.contacts
 					margin: 0
 
