--- a/styl/index.styl
+++ b/styl/index.styl
@@ -35,7 +35,7 @@
 			margin-bottom: 1.25rem
 		.sub-title
 			margin-bottom: 2rem
-		.scroll-down
+		#scroll-down
 			position: absolute
 			bottom: 0
 			right: 0
