--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -7,8 +7,9 @@ html(lang="en")
 
 		section#description
 			.container
-				h1.title.dark Portfolio
-				h2.sub-title We have a proven track record of building high-quality solutions for customers all over the world. Browse through our case studies and see projects that we have implemented.
+				.section-top
+					h1.title.dark Portfolio
+					h2.sub-title We have a proven track record of building high-quality solutions for customers all over the world. Browse through our case studies and see projects that we have implemented.
 
 		section#switcher
 			#switch-left
@@ -59,7 +60,7 @@ html(lang="en")
 							h2.type Mobile Development
 							.name Travel
 						.project-footer
-							.description Our own mobile travel application.
+							.description Our own mobile application that keeps track of the places you visit and shows your exploration progress.
 							a.details-link(href="/portfolio/yow")
 								button.details-button(type="button")
 									span Details
@@ -72,7 +73,7 @@ html(lang="en")
 							h2.type Web Development
 							.name Banking / Finance
 						.project-footer
-							.description A fee billing system project for a major Hong Kong bank.
+							.description Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.
 							a.details-link(href="/portfolio/banking")
 								button.details-button(type="button")
 									span Details
@@ -85,7 +86,7 @@ html(lang="en")
 							h2.type Web Development
 							.name Gambling
 						.project-footer
-							.description Revamping of existing gambling web applications for a betting company.
+							.description Revamping of existing gambling web applications for a betting company with interactive components.
 							a.details-link(href="/portfolio/gambling")
 								button.details-button(type="button")
 									span Details
@@ -98,7 +99,7 @@ html(lang="en")
 							h2.type Web Development
 							.name Travel
 						.project-footer
-							.description Creation of an engaging travel-oriented social network service.
+							.description Creation of an engaging travel-oriented social network service with embedded e-commerce platform.
 							a.details-link(href="/portfolio/social-travel")
 								button.details-button(type="button")
 									span Details
@@ -111,14 +112,14 @@ html(lang="en")
 							h2.type Web Development
 							.name Data Management
 						.project-footer
-							.description Localisation helper for an online sport application
+							.description Localisation helper a software that eases the translation of an online sport application into multiple languages.
 							a.details-link(href="/portfolio/localisation")
 								button.details-button(type="button")
 									span Details
 									span.icon
 										include ../icons/arrow-go
 
-		section#result
+		section#result.section-top
 			h1.title.dark Result
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
