--- a/styl/general.styl
+++ b/styl/general.styl
@@ -42,9 +42,11 @@ button, input, textarea
 input, textarea
 	width: 100%
 	border-radius: 4px
-	border: solid 1px #8492af
+	border: solid 1px #576076
 	padding: 1rem
 	color: #576076
+	transition: border-color .5s ease
+	background-color: transparent
 	&::-webkit-input-placeholder
 		font-size: 13px
 		font-family: 'Roboto'
@@ -53,6 +55,11 @@ input, textarea
 		letter-spacing: 0.3px
 		text-align: left
 		color: rgba(87, 96, 118, 0.5)
+		transition: color .5s ease
+	&:hover, &:focus
+		border-color: #8492af
+		&::-webkit-input-placeholder
+			color: #576076
 
 button
 	cursor: pointer
@@ -331,7 +338,7 @@ header
 			content: none
 
 #switcher
-	margin: 0 1rem
+	margin-bottom: 1rem
 	border-bottom: 1px solid #e4e4f1
 	display: flex
 	justify-content: space-between
@@ -435,16 +442,7 @@ footer
 			flex-direction: row
 			input
 				border-radius: 4px 0 0 4px
-				background-color: #0e1a35
-				border: solid 1px #576076
-				padding: 1rem
-				color: #576076
 				flex: 1
-				&::-webkit-input-placeholder
-					font-size: 13px
-					line-height: 1.38
-					letter-spacing: 0.3px
-					color: rgba(90, 99, 121, 0.5)
 			button
 				position: relative
 				left: -4px
