--- a/parts/header.jade
+++ b/parts/header.jade
@@ -3,7 +3,9 @@ header
 		nav
 			a(href="/").logo-container
 				.logo
+					include ../icons/logo
 				.logo-text-container
+					include ../icons/logo-text
 			.menu-container
 				include menu
 #toggle-navbar
