--- a/portfolio/gambling/index.jade
+++ b/portfolio/gambling/index.jade
@@ -20,27 +20,29 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Gambling
-				h1.title.dark What was the challenge?
-				h2.sub-title Revamp an existing gambling web applications for an Israeli-based betting company. Enable a real-time video stream for games like blackjack, roulette, and baccarat.
+				.section-top
+					h2.type Gambling
+					h1.title.dark What was the challenge?
+					h2.sub-title Revamp an existing gambling web applications for an Israeli-based betting company. Enable a real-time video stream for games like blackjack, roulette, and baccarat.
 
-		section#approaches.gambling
+		section#approaches.section-top.gambling
 			.container
 				h1.title Challenge accepted
 				h2.sub-title To enable a real-time visual experience, the tech team developed the wrapper for video streaming. The users now could watch and participate in the game. A live web chat was created for direct communication. An additional option of spectator mode was designed. The interactive system of betting was introduced by using functional video layers and WebSocket technology.
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag AngularJS
-					.tag Grunt
-					.tag jQuery
-					.tag Less
-					.tag underscore
-					.tag WebSockets
-					.tag TeamCity
-					.tag HTML5 Video
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag AngularJS
+						.tag Grunt
+						.tag jQuery
+						.tag Less
+						.tag underscore
+						.tag WebSockets
+						.tag TeamCity
+						.tag HTML5 Video
 
 		section#gallery
 			.container
