--- a/portfolio/sport/index.jade
+++ b/portfolio/sport/index.jade
@@ -20,31 +20,33 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Entertainment
-				h1.title.dark What was the challenge?
-				h2.sub-title Develop a web application for a sports betting company for the audience of 5 million users. Improve desktop app performance two folds and mobile app performance from 30 seconds to 10 seconds.
+				.section-top
+					h2.type Entertainment
+					h1.title.dark What was the challenge?
+					h2.sub-title Develop a web application for a sports betting company for the audience of 5 million users. Improve desktop app performance two folds and mobile app performance from 30 seconds to 10 seconds.
 
-		section#approaches.sport
+		section#approaches.section-top.sport
 			.container
 				h1.title Challenge accepted
 				h2.sub-title Based on client requirements, our team developed a technological complex web application that gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through extension to existing IPTV software. The features of real-time updates, filtering, statistics were integrated along with video batch downloading. Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag Node.js with Express framework
-					.tag ActiveMQ
-					.tag JavaScript
-					.tag Jade
-					.tag Stylus
-					.tag jQuery
-					.tag Backbone
-					.tag Marionette
-					.tag RequireJS
-					.tag underscore
-					.tag WebSockets
-					.tag HTML5 Video
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag Node.js with Express framework
+						.tag ActiveMQ
+						.tag JavaScript
+						.tag Jade
+						.tag Stylus
+						.tag jQuery
+						.tag Backbone
+						.tag Marionette
+						.tag RequireJS
+						.tag underscore
+						.tag WebSockets
+						.tag HTML5 Video
 
 		section#gallery
 			.container
