--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -9,7 +9,8 @@ html(lang="en")
 
 		section#switcher
 			#switch-left
-				include ../../icons/left-arrow
+				a(href="/services/relocation")
+					include ../../icons/left-arrow
 			a(href="/services/outsource").active
 				h2.sub-title Project Development
 			a(href="/services/outstaff")
@@ -17,7 +18,8 @@ html(lang="en")
 			a(href="/services/relocation")
 				h2.sub-title Specialist for Relocation
 			#switch-right
-				include ../../icons/left-arrow
+				a(href="/services/outstaff")
+					include ../../icons/left-arrow
 
 		section#description
 			.container
