--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -156,6 +156,8 @@
 		@media screen and (min-width: $screenSmall)
 			.prev-project, .next-project
 				display: block
+				&:hover
+					background-color: transparent
 			.prev-project
 				.icon
 					svg
