--- a/styl/services.styl
+++ b/styl/services.styl
@@ -63,10 +63,12 @@
 			color: #8492af
 			&.footer
 				justify-content: center
-				padding: 1rem
+				padding: 0rem
 				cursor: pointer
 				background-color: #576076
 				a	
+					width: 100%
+					padding: 1rem
 					text-align: center
 					color: white
 					font-size: 16px
