--- a/portfolio/banking/index.jade
+++ b/portfolio/banking/index.jade
@@ -20,30 +20,32 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Banking / Finance
-				h1.title.dark What was the challenge?
-				h2.sub-title Create a fee billing system for a major Hong Kong corporate bank. The system has to charge regular fees from institutional clients for management and performance on financial services.
+				.section-top
+					h2.type Banking / Finance
+					h1.title.dark What was the challenge?
+					h2.sub-title Create a fee billing system for a major Hong Kong corporate bank. The system has to charge regular fees from institutional clients for management and performance on financial services.
 
-		section#approaches.banking
+		section#approaches.section-top.banking
 			.container
 				h1.title Challenge accepted
 				h2.sub-title Based on set requirements, our developers team created a single fee management system that gradually reduced costs of the billing process for the bank. The software could optimize fee schedules, had an automated fee discount policy, included automated fee calculation, manual and automated billing workflows and reports, featured customized standard instructions workflow.
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag .NET 3.5
-					.tag ASP.NET MVC 4
-					.tag Oracle 11
-					.tag XPO
-					.tag Client side: CoffeeScript
-					.tag jQuery
-					.tag knockoutJS
-					.tag LESS
-					.tag HTML
-					.tag Watin
-					.tag SpecFlow
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag .NET 3.5
+						.tag ASP.NET MVC 4
+						.tag Oracle 11
+						.tag XPO
+						.tag Client side: CoffeeScript
+						.tag jQuery
+						.tag knockoutJS
+						.tag LESS
+						.tag HTML
+						.tag Watin
+						.tag SpecFlow
 
 		section#gallery
 			.container
