--- a/portfolio/localisation/index.jade
+++ b/portfolio/localisation/index.jade
@@ -20,25 +20,27 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Data Management
-				h1.title.dark What was the challenge?
-				h2.sub-title Provide a solution for translation of an application in 32 languages.
+				.section-top
+					h2.type Data Management
+					h1.title.dark What was the challenge?
+					h2.sub-title Provide a solution for translation of an application in 32 languages.
 
-		section#approaches.localisation
+		section#approaches.section-top.localisation
 			.container
 				h1.title Challenge accepted
 				h2.sub-title To solve the problem of multiple languages our team developed an additional web application that managed project’s localization. The localization helper was an excellent tool to find untranslated or missing words/phrases in translations, securely protected content and prevented from damaging, pulled and gathered data that was previously stored in Google spreadsheets. It divided the users by their role and rights, tracked their activities and provided a backup for accumulated data.
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag NodeJS
-					.tag Google Spreadsheet API
-					.tag MongoDB
-					.tag Angular JS
-					.tag Stylus
-					.tag Jade
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag NodeJS
+						.tag Google Spreadsheet API
+						.tag MongoDB
+						.tag Angular JS
+						.tag Stylus
+						.tag Jade
 
 
 		section#gallery
