--- a/portfolio/social-travel/index.jade
+++ b/portfolio/social-travel/index.jade
@@ -20,32 +20,34 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h2.type Travel
-				h1.title.dark What was the challenge?
-				h2.sub-title Create an engaging travel-oriented social network service. Build a platform that facilitates interaction between travel organizers, tourists, agencies, equipment stores. Consolidate network environment with e-commerce. 
+				.section-top
+					h2.type Travel
+					h1.title.dark What was the challenge?
+					h2.sub-title Create an engaging travel-oriented social network service. Build a platform that facilitates interaction between travel organizers, tourists, agencies, equipment stores. Consolidate network environment with e-commerce. 
 
-		section#approaches.social-travel
+		section#approaches.section-top.social-travel
 			.container
 				h1.title Challenge accepted
 				h2.sub-title
 					p Our team of experts developed a social media application that enabled users to create, book activities (canoeing, climbing, horse-riding, hiking and mountaineering). The activities could be organized both by agencies as well as by single travelers. 
 					p An e-commerce platform was integrated into the web application and facilitated processing not only activity payments but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging. 
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag Angular
-					.tag Bower
-					.tag Sylus
-					.tag Jade
-					.tag Google maps API
-					.tag Java 8
-					.tag Spring MVC
-					.tag ElasticSearch
-					.tag WebSockets
-					.tag Spring Boot
-					.tag Spring Data
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag Angular
+						.tag Bower
+						.tag Sylus
+						.tag Jade
+						.tag Google maps API
+						.tag Java 8
+						.tag Spring MVC
+						.tag ElasticSearch
+						.tag WebSockets
+						.tag Spring Boot
+						.tag Spring Data
 
 
 		section#gallery
