--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -20,29 +20,31 @@ html(lang="en")
 							span Next Project
 							span.icon
 								include ../../icons/arrow-go
-				h1.title.dark YOW
-				h2.sub-title You travel a lot, but you don’t keep track of the places you visited? Your friend asks you about countries you’ve seen and you scratch your head thinking? Better scratch the map. Try our epic application YOW.
-				h2.sub-title As we travel extensively throughout the year for fellow travel-lovers we have crafted an application.
+				.section-top
+					h1.title.dark YOW
+					h2.sub-title You travel a lot, but you don’t keep track of the places you visited? Your friend asks you about countries you’ve seen and you scratch your head thinking? Better scratch the map. Try our epic application YOW.
+					h2.sub-title As we travel extensively throughout the year for fellow travel-lovers we have crafted an application.
 
 
-		section#approaches.yow
+		section#approaches.section-top.yow
 			.container
 				h1.title What is YOW?
 				h2.sub-title YOW is a travel scratch map. Whenever you visit a new country, city, street it uncovers them on the map and marks places you have been to. Travel scratch map is based on Google Maps API keeps track of places you have visited, shows your exploration progress and lets you share them on social networks. It stores photos of your favorite places and suggests the new ones in nearby.
 
-		section#description
+		section#technologies
 			.container
-				h1.title.dark What technologies did we use?
-				.tags
-					.tag C#
-					.tag Xamarin Framework
-					.tag Open GeoData
-					.tag Google Maps
-					.tag Google Places
-					.tag Geolocation
-					.tag AWS (EC2)
-					.tag Jenkins
-					.tag Git
+				.section-top
+					h1.title.dark What technologies did we use?
+					.tags
+						.tag C#
+						.tag Xamarin Framework
+						.tag Open GeoData
+						.tag Google Maps
+						.tag Google Places
+						.tag Geolocation
+						.tag AWS (EC2)
+						.tag Jenkins
+						.tag Git
 
 		section#gallery
 			.container
