--- a/styl/index.styl
+++ b/styl/index.styl
@@ -5,15 +5,6 @@
 @import 'contact-us'
 @import 'portfolio'
 
-@keyframe enterScale {
-	0% {
-		transform: scale(2.0);
-	}
-	100% {
-		transform: scale(1.0);
-	}
-}
-
 #about-page
 
 	header
@@ -23,13 +14,23 @@
 		padding-top: 3rem
 		height 100%
 		position: relative
-		background-image url('/photos/landing.jpg')
-		background-size: cover
-		background-position: 50%
-		background-repeat: no-repeat
 		text-align: center
 		min-height: 500px
-		animation: enterScale 1s ease-in-out infinite alternate;
+		.container
+			position: relative
+			z-index: 1
+		.background-image
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			z-index: -1
+			background-image url('/photos/landing.jpg')
+			background-size: cover
+			background-position: 50%
+			background-repeat: no-repeat
+			animation: enterScale 0.75s 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 		.title
 			font-weight: 300
 			margin-bottom: 1.25rem
@@ -76,17 +77,26 @@
 			background-color: #f3f8ff
 			border: solid 1px #e3eaf3
 		.service-list
+			list-style: none
 			text-align: left
 			font-size: 16px
 			font-weight: 400
 			line-height: 1.5
 			color: #8492af
 			margin-bottom: 2rem
+			padding-left: 0
+			width: 13rem
+			li
+				position: relative
+			svg
+				position: absolute
+				left: -1.4rem
+				top: .45rem
 		.service-description
 			display: flex
 			flex-direction: column
 			justify-content: center
-			text-align: center
+			text-align: left
 		.service-image
 			margin: 0 auto
 		.service-title
@@ -115,6 +125,7 @@
 		@media screen and (min-width: $screenMedium)
 			flex-direction: row
 			justify-content: center
+			align-items: stretch
 			.container.service
 				width: 20rem
 				margin: 0 2rem
@@ -125,6 +136,7 @@
 				&:hover
 					box-shadow: 0 0 30px 0 rgba(195, 206, 228, 0.3)
 				.service-description
+					text-align: center
 					align-items: center
 					width: 100%
 					h1.title
@@ -200,6 +212,8 @@
 		padding-bottom: 5rem
 		#switcher
 			margin-bottom: 3.125rem
+		.desktop-button
+			display: none
 		.swipeshow-active .slides
 			cursor: default
 		.portfolio-slides
@@ -207,8 +221,9 @@
 			.slide
 				width: 100%
 				.portfolio-image
-					height: 165px
+					height: 300px
 					background-size: cover
+					margin: auto
 					margin-top: 1rem
 					&.web
 						background-image: url('/images/png/hp-1-web.png')
@@ -226,4 +241,34 @@
 				.portfolio-image
 					height: 400px
 					width: 500px
+		@media screen and (min-width: $screenMedium)
+			.portfolio-slides .slide
+				overflow: hidden
+				.sub-title
+					text-align: left
+					width: auto
+				.tags
+					justify-content: flex-start
+				.portfolio-item
+					padding-right: 300px
+					width: 722px
 					margin: auto
+					position: relative
+					min-height: 22rem
+				.portfolio-image
+					width: 758px
+					height: 350px
+					position: absolute
+					top: -15px
+					right: -100%
+					transform: translateX(-300px)
+					background-size: contain
+					background-repeat: no-repeat
+					&.web
+						top: -40px
+			.desktop-button
+				display: block
+				text-align: left
+				margin-top: 3.125rem
+			.dots, .mobile-button
+				display: none
