--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -6,3 +6,12 @@ $screenLarge = 1200px
 $screenLargeXLarge = 1300px
 $screenXLarge = 1400px
 // end dimentions
+
+@keyframes enterScale {
+	0% {
+		transform: scale(1.2)
+	}
+	100% {
+		transform: scale(1.0)
+	}
+}
