--- a/icons/1-quality.jade
+++ b/icons/1-quality.jade
@@ -1,4 +1,4 @@
-svg(xmlns='http://www.w3.org/2000/svg', width='68', height='76')
+svg(xmlns='http://www.w3.org/2000/svg', width='68', height='76' viewbox="0 0 68 76")
 	defs
 		lineargradient#a(x1='0%', x2='12.187%', y1='99.255%', y2='0%')
 			stop(offset='0%', stop-color='#4444B9')
