--- a/styl/general.styl
+++ b/styl/general.styl
@@ -26,15 +26,16 @@ a
 				path
 					fill: white
 	&.link
-		font-weight: 300
+		font-weight: 400
 		color: #8492af
 		text-decoration: underline
+		transition: color .3s ease
 	&.underlined
 		&:hover
 			color: #0e1a35
 	&:visited
 		text-decoration: none
-		color: #576076
+		color: #8492af
 
 button, input, textarea
 	outline: none
@@ -48,7 +49,7 @@ input, textarea
 	transition: border-color .5s ease
 	background-color: transparent
 	&::-webkit-input-placeholder
-		font-size: 13px
+		font-size: 14px
 		font-family: 'Roboto'
 		font-weight: 400
 		line-height: 1.38
@@ -111,7 +112,7 @@ button
 h1.title
 	font-family Roboto
 	font-size 30px
-	font-weight 100
+	font-weight 300
 	text-align center
 	line-height: 1
 	color #ffffff
@@ -121,7 +122,6 @@ h1.title
 		color: #0e1a35
 	@media screen and (min-width: $screenMedium)
 		font-size: 60px
-		font-weight: 100
 	
 h2.sub-title
 	font-size: 16px
@@ -200,7 +200,7 @@ body
 	flex-wrap: wrap
 	justify-content: center
 	.tag
-		font-size: 13px
+		font-size: 14px
 		color: #8092ba
 		font-weight: 400
 		margin: .3rem
@@ -340,7 +340,7 @@ header
 			transform: rotate(180deg)
 	h2
 		width: auto
-		font-size: 13px
+		font-size: 14px
 		letter-spacing: 0.3px
 		text-transform: uppercase
 		position: relative
@@ -377,7 +377,6 @@ header
 					bottom: -17px
 		#switch-left, #switch-right
 			display: none
-
 		
 #toggle-navbar
 	background-color: transparent
@@ -433,7 +432,7 @@ footer
 				left: -4px
 				border-radius: 0 4px 4px 0
 				background-color: #576076
-				font-size: 13px
+				font-size: 14px
 				line-height: 1.38
 				letter-spacing: 0.3px
 				color: #ffffff
@@ -443,7 +442,7 @@ footer
 	.contacts
 		margin: 2rem auto
 		width: 11rem
-		font-size: 13px
+		font-size: 14px
 		text-align: center
 		color: #576076
 		font-weight: 400
@@ -454,7 +453,7 @@ footer
 			margin-bottom: 1rem
 			
 	.copyright
-		font-size: 13px
+		font-size: 14px
 		font-weight: 400
 		line-height: 2.31
 		text-align: center
