--- a/styl/index.styl
+++ b/styl/index.styl
@@ -5,6 +5,11 @@
 @import 'contact-us'
 @import 'portfolio'
 
+body.content-loaded
+	#landing
+		.background-image
+			animation: enterScale 0.75s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards
+
 #about-page
 
 	header
@@ -26,11 +31,11 @@
 			width: 100%
 			height: 100%
 			z-index: -1
+			transform: scale(1.2)
 			background-image url('/photos/landing.jpg')
 			background-size: cover
 			background-position: 50%
 			background-repeat: no-repeat
-			animation: enterScale 0.75s 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 		.title
 			font-weight: 300
 			margin-bottom: 1.25rem
@@ -72,18 +77,19 @@
 		flex-direction: column
 		.container
 			width: 100%
-			padding-top: 3rem
-			padding-bottom: 3rem
+			padding-top: 2.5rem
+			padding-bottom: 2.5rem
 			background-color: #f3f8ff
 			border: solid 1px #e3eaf3
 		.service-list
 			list-style: none
 			text-align: left
-			font-size: 16px
+			font-size: 14px
 			font-weight: 400
-			line-height: 1.5
-			color: #8492af
-			margin-bottom: 2rem
+			line-height: 1.7
+			color: #0e1a35
+			margin-bottom: 1.75rem
+			margin-top: 1.25rem
 			padding-left: 0
 			width: 13rem
 			li
@@ -105,10 +111,9 @@
 			margin: 1rem 0 0 0
 			letter-spacing: 0.4px
 		.service-subtitle
-			font-size: 13px
-			line-height: 1.38
+			font-size: 14px
+			line-height: 1
 			letter-spacing: 0.3px
-			margin-bottom: 1.5rem
 		@media screen and (min-width: $screenSmall)
 			.container
 				width: 100%
@@ -134,7 +139,7 @@
 				border-radius: 4px
 				transition: box-shadow .3s ease
 				&:hover
-					box-shadow: 0 0 30px 0 rgba(195, 206, 228, 0.3)
+					box-shadow: 0 0 20px 0 rgba(195, 206, 228, 0.5);
 				.service-description
 					text-align: center
 					align-items: center
@@ -166,7 +171,7 @@
 	#guarantee
 		background-color: #0e1a35
 		.sub-title
-			color: #576076
+			color: #8c9ab5
 		.features-container
 			margin-top: -1rem
 			margin-bottom: 5rem
@@ -182,7 +187,8 @@
 					margin-right: 1rem
 				span
 					font-size: 16px
-					font-weight: 300
+					font-weight: 400
+					opacity: .8
 					letter-spacing: 0.3px
 					color: #fefefe
 					&.intellectual
@@ -190,11 +196,9 @@
 		@media screen and (min-width: $screenSmall)
 			.title
 				font-size: 48px
-				font-weight: 100
 				line-height: 1
 			.sub-title
 				font-size: 18px
-				font-weight: 300
 			.features-container
 				display: flex
 				flex-direction: row
@@ -232,7 +236,7 @@
 					&.design
 						background-image: url('/images/png/hp-3-design.png')
 				.sub-title
-					font-size: 13px
+					font-size: 14px
 					line-height: 1.38
 					letter-spacing: 0.3px
 					margin-bottom: 1rem
