--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -20,7 +20,7 @@ html(lang="en")
 							input#user_email(type="email" placeholder="Email" name="email" required)
 							input#user_phone(type="tel" placeholder="Phone Number (optional)" name="phone" pattern="^\d{4}-\d{3}-\d{4}$")
 							textarea#user_message(name="message" rows="5" placeholder="Message")
-						button.black(type="submit") Send Email
+						button.white(type="submit") Send Email
 
 				.contact-info
 					.details
@@ -40,16 +40,6 @@ html(lang="en")
 								span.icon
 									include ../icons/mail
 								span info@uneedweb.com
-
-		//- #contact-footer
-		//- 	h1.title.dark Still have a questions?
-		//- 	h2.sub-title You can always send us a message, tweet or e-mail. We'd be happy to help you out.
-
-		//- 	a(href="/services")
-		//- 		button(role="button")
-		//- 			span Go to our Services
-		//- 			span.icon
-		//- 				include ../icons/arrow-go
 
 		include ../parts/footer
 		script(type="text/javascript" src="/js/contact-us.min.js")
