--- a/icons/logo.jade
+++ b/icons/logo.jade
@@ -1,4 +1,4 @@
-svg(xmlns='http://www.w3.org/2000/svg', width='52', height='59')
+svg(xmlns='http://www.w3.org/2000/svg', width='52', height='59', viewbox="0 0 52 59")
   defs
     lineargradient#a(x1='34.202%', x2='0%', y1='93.969%', y2='0%')
       stop(offset='0%', stop-color='#4444B9')
