--- a/styl/services.styl
+++ b/styl/services.styl
@@ -79,7 +79,7 @@
 					background-color: #8492af
 			&.button
 				justify-content: center
-				padding: 2rem
+				padding: 2rem 1rem
 			.option-name
 				padding-right: 2rem
 			.option-value
@@ -95,6 +95,7 @@
 					opacity: 1
 		@media screen and (min-width: $screenSmall)
 			width: 90%
+			max-width: 970px
 			margin: 0 auto 5rem auto
 			display: flex
 			border-radius: 4px
